src/compiler/rules_c/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declist funclist
Rule 2     program -> declist
Rule 3     program -> funclist
Rule 4     declist -> declaration
Rule 5     declist -> declist declaration
Rule 6     funclist -> function
Rule 7     funclist -> funclist function
Rule 8     declaration -> type identlist SEMICOLON
Rule 9     identlist -> identifier
Rule 10    identlist -> identlist COMMA identifier
Rule 11    identifier -> ID
Rule 12    identifier -> ID LBRACKET NUMBER RBRACKET
Rule 13    paramlist -> parameter
Rule 14    paramlist -> paramlist COMMA parameter
Rule 15    parameter -> type identifier
Rule 16    function -> type ID LPAREN RPAREN compoundstmt
Rule 17    function -> type ID LPAREN paramlist RPAREN compoundstmt
Rule 18    type -> INT
Rule 19    type -> FLOAT
Rule 20    compoundstmt -> LBRACE RBRACE
Rule 21    compoundstmt -> LBRACE stmtlist RBRACE
Rule 22    compoundstmt -> LBRACE declist stmtlist RBRACE
Rule 23    compoundstmt -> LBRACE declist RBRACE
Rule 24    stmtlist -> stmt
Rule 25    stmtlist -> stmtlist stmt
Rule 26    stmt -> assignstmt
Rule 27    stmt -> callstmt
Rule 28    stmt -> retstmt
Rule 29    stmt -> while
Rule 30    stmt -> for
Rule 31    stmt -> if
Rule 32    stmt -> compoundstmt
Rule 33    stmt -> SEMICOLON
Rule 34    assignstmt -> assign SEMICOLON
Rule 35    assign -> ID EQUAL expr
Rule 36    assign -> ID LBRACKET expr RBRACKET EQUAL expr
Rule 37    callstmt -> call SEMICOLON
Rule 38    call -> ID LPAREN RPAREN
Rule 39    call -> ID LPAREN arglist RPAREN
Rule 40    arglist -> arg
Rule 41    arglist -> arglist COMMA arg
Rule 42    arg -> expr
Rule 43    retstmt -> RETURN SEMICOLON
Rule 44    retstmt -> RETURN expr SEMICOLON
Rule 45    expr -> expr MINUS expr
Rule 46    expr -> expr PLUS expr
Rule 47    expr -> expr MULT expr
Rule 48    expr -> expr DIV expr
Rule 49    expr -> expr LE expr
Rule 50    expr -> expr GE expr
Rule 51    expr -> expr GT expr
Rule 52    expr -> expr LT expr
Rule 53    expr -> expr EQ expr
Rule 54    expr -> expr NE expr
Rule 55    expr -> call
Rule 56    expr -> NUMBER
Rule 57    expr -> FNUMBER
Rule 58    expr -> id
Rule 59    expr -> LPAREN expr RPAREN
Rule 60    id -> ID
Rule 61    id -> ID LBRACKET expr RBRACKET
Rule 62    while -> WHILE LPAREN expr RPAREN stmt
Rule 63    while -> DO stmt WHILE LPAREN expr RPAREN SEMICOLON
Rule 64    for -> FOR LPAREN assign SEMICOLON expr SEMICOLON assign RPAREN stmt
Rule 65    if -> IF LPAREN expr RPAREN stmt
Rule 66    if -> IF LPAREN expr RPAREN stmt ELSE stmt

Terminals, with rules where they appear

COMMA                : 10 14 41
DIV                  : 48
DO                   : 63
ELSE                 : 66
EQ                   : 53
EQUAL                : 35 36
FLOAT                : 19
FNUMBER              : 57
FOR                  : 64
GE                   : 50
GT                   : 51
ID                   : 11 12 16 17 35 36 38 39 60 61
IF                   : 65 66
INT                  : 18
LBRACE               : 20 21 22 23
LBRACKET             : 12 36 61
LE                   : 49
LPAREN               : 16 17 38 39 59 62 63 64 65 66
LT                   : 52
MINUS                : 45
MULT                 : 47
NE                   : 54
NUMBER               : 12 56
PLUS                 : 46
RBRACE               : 20 21 22 23
RBRACKET             : 12 36 61
RETURN               : 43 44
RPAREN               : 16 17 38 39 59 62 63 64 65 66
SEMICOLON            : 8 33 34 37 43 44 63 64 64
WHILE                : 62 63
error                : 

Nonterminals, with rules where they appear

arg                  : 40 41
arglist              : 39 41
assign               : 34 64 64
assignstmt           : 26
call                 : 37 55
callstmt             : 27
compoundstmt         : 16 17 32
declaration          : 4 5
declist              : 1 2 5 22 23
expr                 : 35 36 36 42 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 59 61 62 63 64 65 66
for                  : 30
funclist             : 1 3 7
function             : 6 7
id                   : 58
identifier           : 9 10 15
identlist            : 8 10
if                   : 31
parameter            : 13 14
paramlist            : 14 17
program              : 0
retstmt              : 28
stmt                 : 24 25 62 63 64 65 66 66
stmtlist             : 21 22 25
type                 : 8 15 16 17
while                : 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declist funclist
    (2) program -> . declist
    (3) program -> . funclist
    (4) declist -> . declaration
    (5) declist -> . declist declaration
    (6) funclist -> . function
    (7) funclist -> . funclist function
    (8) declaration -> . type identlist SEMICOLON
    (16) function -> . type ID LPAREN RPAREN compoundstmt
    (17) function -> . type ID LPAREN paramlist RPAREN compoundstmt
    (18) type -> . INT
    (19) type -> . FLOAT

    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    program                        shift and go to state 1
    declist                        shift and go to state 2
    funclist                       shift and go to state 3
    declaration                    shift and go to state 4
    function                       shift and go to state 5
    type                           shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declist . funclist
    (2) program -> declist .
    (5) declist -> declist . declaration
    (6) funclist -> . function
    (7) funclist -> . funclist function
    (8) declaration -> . type identlist SEMICOLON
    (16) function -> . type ID LPAREN RPAREN compoundstmt
    (17) function -> . type ID LPAREN paramlist RPAREN compoundstmt
    (18) type -> . INT
    (19) type -> . FLOAT

    $end            reduce using rule 2 (program -> declist .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    funclist                       shift and go to state 9
    declaration                    shift and go to state 10
    function                       shift and go to state 5
    type                           shift and go to state 6

state 3

    (3) program -> funclist .
    (7) funclist -> funclist . function
    (16) function -> . type ID LPAREN RPAREN compoundstmt
    (17) function -> . type ID LPAREN paramlist RPAREN compoundstmt
    (18) type -> . INT
    (19) type -> . FLOAT

    $end            reduce using rule 3 (program -> funclist .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    function                       shift and go to state 11
    type                           shift and go to state 12

state 4

    (4) declist -> declaration .

    INT             reduce using rule 4 (declist -> declaration .)
    FLOAT           reduce using rule 4 (declist -> declaration .)
    $end            reduce using rule 4 (declist -> declaration .)
    RBRACE          reduce using rule 4 (declist -> declaration .)
    SEMICOLON       reduce using rule 4 (declist -> declaration .)
    RETURN          reduce using rule 4 (declist -> declaration .)
    WHILE           reduce using rule 4 (declist -> declaration .)
    DO              reduce using rule 4 (declist -> declaration .)
    FOR             reduce using rule 4 (declist -> declaration .)
    IF              reduce using rule 4 (declist -> declaration .)
    LBRACE          reduce using rule 4 (declist -> declaration .)
    ID              reduce using rule 4 (declist -> declaration .)


state 5

    (6) funclist -> function .

    INT             reduce using rule 6 (funclist -> function .)
    FLOAT           reduce using rule 6 (funclist -> function .)
    $end            reduce using rule 6 (funclist -> function .)


state 6

    (8) declaration -> type . identlist SEMICOLON
    (16) function -> type . ID LPAREN RPAREN compoundstmt
    (17) function -> type . ID LPAREN paramlist RPAREN compoundstmt
    (9) identlist -> . identifier
    (10) identlist -> . identlist COMMA identifier
    (11) identifier -> . ID
    (12) identifier -> . ID LBRACKET NUMBER RBRACKET

    ID              shift and go to state 14

    identlist                      shift and go to state 13
    identifier                     shift and go to state 15

state 7

    (18) type -> INT .

    ID              reduce using rule 18 (type -> INT .)


state 8

    (19) type -> FLOAT .

    ID              reduce using rule 19 (type -> FLOAT .)


state 9

    (1) program -> declist funclist .
    (7) funclist -> funclist . function
    (16) function -> . type ID LPAREN RPAREN compoundstmt
    (17) function -> . type ID LPAREN paramlist RPAREN compoundstmt
    (18) type -> . INT
    (19) type -> . FLOAT

    $end            reduce using rule 1 (program -> declist funclist .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    function                       shift and go to state 11
    type                           shift and go to state 12

state 10

    (5) declist -> declist declaration .

    INT             reduce using rule 5 (declist -> declist declaration .)
    FLOAT           reduce using rule 5 (declist -> declist declaration .)
    $end            reduce using rule 5 (declist -> declist declaration .)
    RBRACE          reduce using rule 5 (declist -> declist declaration .)
    SEMICOLON       reduce using rule 5 (declist -> declist declaration .)
    RETURN          reduce using rule 5 (declist -> declist declaration .)
    WHILE           reduce using rule 5 (declist -> declist declaration .)
    DO              reduce using rule 5 (declist -> declist declaration .)
    FOR             reduce using rule 5 (declist -> declist declaration .)
    IF              reduce using rule 5 (declist -> declist declaration .)
    LBRACE          reduce using rule 5 (declist -> declist declaration .)
    ID              reduce using rule 5 (declist -> declist declaration .)


state 11

    (7) funclist -> funclist function .

    INT             reduce using rule 7 (funclist -> funclist function .)
    FLOAT           reduce using rule 7 (funclist -> funclist function .)
    $end            reduce using rule 7 (funclist -> funclist function .)


state 12

    (16) function -> type . ID LPAREN RPAREN compoundstmt
    (17) function -> type . ID LPAREN paramlist RPAREN compoundstmt

    ID              shift and go to state 16


state 13

    (8) declaration -> type identlist . SEMICOLON
    (10) identlist -> identlist . COMMA identifier

    SEMICOLON       shift and go to state 17
    COMMA           shift and go to state 18


state 14

    (16) function -> type ID . LPAREN RPAREN compoundstmt
    (17) function -> type ID . LPAREN paramlist RPAREN compoundstmt
    (11) identifier -> ID .
    (12) identifier -> ID . LBRACKET NUMBER RBRACKET

    LPAREN          shift and go to state 19
    SEMICOLON       reduce using rule 11 (identifier -> ID .)
    COMMA           reduce using rule 11 (identifier -> ID .)
    LBRACKET        shift and go to state 20


state 15

    (9) identlist -> identifier .

    SEMICOLON       reduce using rule 9 (identlist -> identifier .)
    COMMA           reduce using rule 9 (identlist -> identifier .)


state 16

    (16) function -> type ID . LPAREN RPAREN compoundstmt
    (17) function -> type ID . LPAREN paramlist RPAREN compoundstmt

    LPAREN          shift and go to state 19


state 17

    (8) declaration -> type identlist SEMICOLON .

    INT             reduce using rule 8 (declaration -> type identlist SEMICOLON .)
    FLOAT           reduce using rule 8 (declaration -> type identlist SEMICOLON .)
    $end            reduce using rule 8 (declaration -> type identlist SEMICOLON .)
    RBRACE          reduce using rule 8 (declaration -> type identlist SEMICOLON .)
    SEMICOLON       reduce using rule 8 (declaration -> type identlist SEMICOLON .)
    RETURN          reduce using rule 8 (declaration -> type identlist SEMICOLON .)
    WHILE           reduce using rule 8 (declaration -> type identlist SEMICOLON .)
    DO              reduce using rule 8 (declaration -> type identlist SEMICOLON .)
    FOR             reduce using rule 8 (declaration -> type identlist SEMICOLON .)
    IF              reduce using rule 8 (declaration -> type identlist SEMICOLON .)
    LBRACE          reduce using rule 8 (declaration -> type identlist SEMICOLON .)
    ID              reduce using rule 8 (declaration -> type identlist SEMICOLON .)


state 18

    (10) identlist -> identlist COMMA . identifier
    (11) identifier -> . ID
    (12) identifier -> . ID LBRACKET NUMBER RBRACKET

    ID              shift and go to state 22

    identifier                     shift and go to state 21

state 19

    (16) function -> type ID LPAREN . RPAREN compoundstmt
    (17) function -> type ID LPAREN . paramlist RPAREN compoundstmt
    (13) paramlist -> . parameter
    (14) paramlist -> . paramlist COMMA parameter
    (15) parameter -> . type identifier
    (18) type -> . INT
    (19) type -> . FLOAT

    RPAREN          shift and go to state 24
    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    type                           shift and go to state 23
    paramlist                      shift and go to state 25
    parameter                      shift and go to state 26

state 20

    (12) identifier -> ID LBRACKET . NUMBER RBRACKET

    NUMBER          shift and go to state 27


state 21

    (10) identlist -> identlist COMMA identifier .

    SEMICOLON       reduce using rule 10 (identlist -> identlist COMMA identifier .)
    COMMA           reduce using rule 10 (identlist -> identlist COMMA identifier .)


state 22

    (11) identifier -> ID .
    (12) identifier -> ID . LBRACKET NUMBER RBRACKET

    SEMICOLON       reduce using rule 11 (identifier -> ID .)
    COMMA           reduce using rule 11 (identifier -> ID .)
    RPAREN          reduce using rule 11 (identifier -> ID .)
    LBRACKET        shift and go to state 20


state 23

    (15) parameter -> type . identifier
    (11) identifier -> . ID
    (12) identifier -> . ID LBRACKET NUMBER RBRACKET

    ID              shift and go to state 22

    identifier                     shift and go to state 28

state 24

    (16) function -> type ID LPAREN RPAREN . compoundstmt
    (20) compoundstmt -> . LBRACE RBRACE
    (21) compoundstmt -> . LBRACE stmtlist RBRACE
    (22) compoundstmt -> . LBRACE declist stmtlist RBRACE
    (23) compoundstmt -> . LBRACE declist RBRACE

    LBRACE          shift and go to state 30

    compoundstmt                   shift and go to state 29

state 25

    (17) function -> type ID LPAREN paramlist . RPAREN compoundstmt
    (14) paramlist -> paramlist . COMMA parameter

    RPAREN          shift and go to state 31
    COMMA           shift and go to state 32


state 26

    (13) paramlist -> parameter .

    RPAREN          reduce using rule 13 (paramlist -> parameter .)
    COMMA           reduce using rule 13 (paramlist -> parameter .)


state 27

    (12) identifier -> ID LBRACKET NUMBER . RBRACKET

    RBRACKET        shift and go to state 33


state 28

    (15) parameter -> type identifier .

    RPAREN          reduce using rule 15 (parameter -> type identifier .)
    COMMA           reduce using rule 15 (parameter -> type identifier .)


state 29

    (16) function -> type ID LPAREN RPAREN compoundstmt .

    INT             reduce using rule 16 (function -> type ID LPAREN RPAREN compoundstmt .)
    FLOAT           reduce using rule 16 (function -> type ID LPAREN RPAREN compoundstmt .)
    $end            reduce using rule 16 (function -> type ID LPAREN RPAREN compoundstmt .)


state 30

    (20) compoundstmt -> LBRACE . RBRACE
    (21) compoundstmt -> LBRACE . stmtlist RBRACE
    (22) compoundstmt -> LBRACE . declist stmtlist RBRACE
    (23) compoundstmt -> LBRACE . declist RBRACE
    (24) stmtlist -> . stmt
    (25) stmtlist -> . stmtlist stmt
    (4) declist -> . declaration
    (5) declist -> . declist declaration
    (26) stmt -> . assignstmt
    (27) stmt -> . callstmt
    (28) stmt -> . retstmt
    (29) stmt -> . while
    (30) stmt -> . for
    (31) stmt -> . if
    (32) stmt -> . compoundstmt
    (33) stmt -> . SEMICOLON
    (8) declaration -> . type identlist SEMICOLON
    (34) assignstmt -> . assign SEMICOLON
    (37) callstmt -> . call SEMICOLON
    (43) retstmt -> . RETURN SEMICOLON
    (44) retstmt -> . RETURN expr SEMICOLON
    (62) while -> . WHILE LPAREN expr RPAREN stmt
    (63) while -> . DO stmt WHILE LPAREN expr RPAREN SEMICOLON
    (64) for -> . FOR LPAREN assign SEMICOLON expr SEMICOLON assign RPAREN stmt
    (65) if -> . IF LPAREN expr RPAREN stmt
    (66) if -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (20) compoundstmt -> . LBRACE RBRACE
    (21) compoundstmt -> . LBRACE stmtlist RBRACE
    (22) compoundstmt -> . LBRACE declist stmtlist RBRACE
    (23) compoundstmt -> . LBRACE declist RBRACE
    (18) type -> . INT
    (19) type -> . FLOAT
    (35) assign -> . ID EQUAL expr
    (36) assign -> . ID LBRACKET expr RBRACKET EQUAL expr
    (38) call -> . ID LPAREN RPAREN
    (39) call -> . ID LPAREN arglist RPAREN

    RBRACE          shift and go to state 34
    SEMICOLON       shift and go to state 45
    RETURN          shift and go to state 49
    WHILE           shift and go to state 50
    DO              shift and go to state 51
    FOR             shift and go to state 52
    IF              shift and go to state 53
    LBRACE          shift and go to state 30
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    ID              shift and go to state 54

    stmtlist                       shift and go to state 35
    declist                        shift and go to state 36
    stmt                           shift and go to state 37
    declaration                    shift and go to state 4
    assignstmt                     shift and go to state 38
    callstmt                       shift and go to state 39
    retstmt                        shift and go to state 40
    while                          shift and go to state 41
    for                            shift and go to state 42
    if                             shift and go to state 43
    compoundstmt                   shift and go to state 44
    type                           shift and go to state 46
    assign                         shift and go to state 47
    call                           shift and go to state 48

state 31

    (17) function -> type ID LPAREN paramlist RPAREN . compoundstmt
    (20) compoundstmt -> . LBRACE RBRACE
    (21) compoundstmt -> . LBRACE stmtlist RBRACE
    (22) compoundstmt -> . LBRACE declist stmtlist RBRACE
    (23) compoundstmt -> . LBRACE declist RBRACE

    LBRACE          shift and go to state 30

    compoundstmt                   shift and go to state 55

state 32

    (14) paramlist -> paramlist COMMA . parameter
    (15) parameter -> . type identifier
    (18) type -> . INT
    (19) type -> . FLOAT

    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    parameter                      shift and go to state 56
    type                           shift and go to state 23

state 33

    (12) identifier -> ID LBRACKET NUMBER RBRACKET .

    SEMICOLON       reduce using rule 12 (identifier -> ID LBRACKET NUMBER RBRACKET .)
    COMMA           reduce using rule 12 (identifier -> ID LBRACKET NUMBER RBRACKET .)
    RPAREN          reduce using rule 12 (identifier -> ID LBRACKET NUMBER RBRACKET .)


state 34

    (20) compoundstmt -> LBRACE RBRACE .

    INT             reduce using rule 20 (compoundstmt -> LBRACE RBRACE .)
    FLOAT           reduce using rule 20 (compoundstmt -> LBRACE RBRACE .)
    $end            reduce using rule 20 (compoundstmt -> LBRACE RBRACE .)
    RBRACE          reduce using rule 20 (compoundstmt -> LBRACE RBRACE .)
    SEMICOLON       reduce using rule 20 (compoundstmt -> LBRACE RBRACE .)
    RETURN          reduce using rule 20 (compoundstmt -> LBRACE RBRACE .)
    WHILE           reduce using rule 20 (compoundstmt -> LBRACE RBRACE .)
    DO              reduce using rule 20 (compoundstmt -> LBRACE RBRACE .)
    FOR             reduce using rule 20 (compoundstmt -> LBRACE RBRACE .)
    IF              reduce using rule 20 (compoundstmt -> LBRACE RBRACE .)
    LBRACE          reduce using rule 20 (compoundstmt -> LBRACE RBRACE .)
    ID              reduce using rule 20 (compoundstmt -> LBRACE RBRACE .)
    ELSE            reduce using rule 20 (compoundstmt -> LBRACE RBRACE .)


state 35

    (21) compoundstmt -> LBRACE stmtlist . RBRACE
    (25) stmtlist -> stmtlist . stmt
    (26) stmt -> . assignstmt
    (27) stmt -> . callstmt
    (28) stmt -> . retstmt
    (29) stmt -> . while
    (30) stmt -> . for
    (31) stmt -> . if
    (32) stmt -> . compoundstmt
    (33) stmt -> . SEMICOLON
    (34) assignstmt -> . assign SEMICOLON
    (37) callstmt -> . call SEMICOLON
    (43) retstmt -> . RETURN SEMICOLON
    (44) retstmt -> . RETURN expr SEMICOLON
    (62) while -> . WHILE LPAREN expr RPAREN stmt
    (63) while -> . DO stmt WHILE LPAREN expr RPAREN SEMICOLON
    (64) for -> . FOR LPAREN assign SEMICOLON expr SEMICOLON assign RPAREN stmt
    (65) if -> . IF LPAREN expr RPAREN stmt
    (66) if -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (20) compoundstmt -> . LBRACE RBRACE
    (21) compoundstmt -> . LBRACE stmtlist RBRACE
    (22) compoundstmt -> . LBRACE declist stmtlist RBRACE
    (23) compoundstmt -> . LBRACE declist RBRACE
    (35) assign -> . ID EQUAL expr
    (36) assign -> . ID LBRACKET expr RBRACKET EQUAL expr
    (38) call -> . ID LPAREN RPAREN
    (39) call -> . ID LPAREN arglist RPAREN

    RBRACE          shift and go to state 57
    SEMICOLON       shift and go to state 45
    RETURN          shift and go to state 49
    WHILE           shift and go to state 50
    DO              shift and go to state 51
    FOR             shift and go to state 52
    IF              shift and go to state 53
    LBRACE          shift and go to state 30
    ID              shift and go to state 54

    stmt                           shift and go to state 58
    assignstmt                     shift and go to state 38
    callstmt                       shift and go to state 39
    retstmt                        shift and go to state 40
    while                          shift and go to state 41
    for                            shift and go to state 42
    if                             shift and go to state 43
    compoundstmt                   shift and go to state 44
    assign                         shift and go to state 47
    call                           shift and go to state 48

state 36

    (22) compoundstmt -> LBRACE declist . stmtlist RBRACE
    (23) compoundstmt -> LBRACE declist . RBRACE
    (5) declist -> declist . declaration
    (24) stmtlist -> . stmt
    (25) stmtlist -> . stmtlist stmt
    (8) declaration -> . type identlist SEMICOLON
    (26) stmt -> . assignstmt
    (27) stmt -> . callstmt
    (28) stmt -> . retstmt
    (29) stmt -> . while
    (30) stmt -> . for
    (31) stmt -> . if
    (32) stmt -> . compoundstmt
    (33) stmt -> . SEMICOLON
    (18) type -> . INT
    (19) type -> . FLOAT
    (34) assignstmt -> . assign SEMICOLON
    (37) callstmt -> . call SEMICOLON
    (43) retstmt -> . RETURN SEMICOLON
    (44) retstmt -> . RETURN expr SEMICOLON
    (62) while -> . WHILE LPAREN expr RPAREN stmt
    (63) while -> . DO stmt WHILE LPAREN expr RPAREN SEMICOLON
    (64) for -> . FOR LPAREN assign SEMICOLON expr SEMICOLON assign RPAREN stmt
    (65) if -> . IF LPAREN expr RPAREN stmt
    (66) if -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (20) compoundstmt -> . LBRACE RBRACE
    (21) compoundstmt -> . LBRACE stmtlist RBRACE
    (22) compoundstmt -> . LBRACE declist stmtlist RBRACE
    (23) compoundstmt -> . LBRACE declist RBRACE
    (35) assign -> . ID EQUAL expr
    (36) assign -> . ID LBRACKET expr RBRACKET EQUAL expr
    (38) call -> . ID LPAREN RPAREN
    (39) call -> . ID LPAREN arglist RPAREN

    RBRACE          shift and go to state 60
    SEMICOLON       shift and go to state 45
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    RETURN          shift and go to state 49
    WHILE           shift and go to state 50
    DO              shift and go to state 51
    FOR             shift and go to state 52
    IF              shift and go to state 53
    LBRACE          shift and go to state 30
    ID              shift and go to state 54

    stmtlist                       shift and go to state 59
    declaration                    shift and go to state 10
    stmt                           shift and go to state 37
    type                           shift and go to state 46
    assignstmt                     shift and go to state 38
    callstmt                       shift and go to state 39
    retstmt                        shift and go to state 40
    while                          shift and go to state 41
    for                            shift and go to state 42
    if                             shift and go to state 43
    compoundstmt                   shift and go to state 44
    assign                         shift and go to state 47
    call                           shift and go to state 48

state 37

    (24) stmtlist -> stmt .

    RBRACE          reduce using rule 24 (stmtlist -> stmt .)
    SEMICOLON       reduce using rule 24 (stmtlist -> stmt .)
    RETURN          reduce using rule 24 (stmtlist -> stmt .)
    WHILE           reduce using rule 24 (stmtlist -> stmt .)
    DO              reduce using rule 24 (stmtlist -> stmt .)
    FOR             reduce using rule 24 (stmtlist -> stmt .)
    IF              reduce using rule 24 (stmtlist -> stmt .)
    LBRACE          reduce using rule 24 (stmtlist -> stmt .)
    ID              reduce using rule 24 (stmtlist -> stmt .)


state 38

    (26) stmt -> assignstmt .

    RBRACE          reduce using rule 26 (stmt -> assignstmt .)
    SEMICOLON       reduce using rule 26 (stmt -> assignstmt .)
    RETURN          reduce using rule 26 (stmt -> assignstmt .)
    WHILE           reduce using rule 26 (stmt -> assignstmt .)
    DO              reduce using rule 26 (stmt -> assignstmt .)
    FOR             reduce using rule 26 (stmt -> assignstmt .)
    IF              reduce using rule 26 (stmt -> assignstmt .)
    LBRACE          reduce using rule 26 (stmt -> assignstmt .)
    ID              reduce using rule 26 (stmt -> assignstmt .)
    ELSE            reduce using rule 26 (stmt -> assignstmt .)


state 39

    (27) stmt -> callstmt .

    RBRACE          reduce using rule 27 (stmt -> callstmt .)
    SEMICOLON       reduce using rule 27 (stmt -> callstmt .)
    RETURN          reduce using rule 27 (stmt -> callstmt .)
    WHILE           reduce using rule 27 (stmt -> callstmt .)
    DO              reduce using rule 27 (stmt -> callstmt .)
    FOR             reduce using rule 27 (stmt -> callstmt .)
    IF              reduce using rule 27 (stmt -> callstmt .)
    LBRACE          reduce using rule 27 (stmt -> callstmt .)
    ID              reduce using rule 27 (stmt -> callstmt .)
    ELSE            reduce using rule 27 (stmt -> callstmt .)


state 40

    (28) stmt -> retstmt .

    RBRACE          reduce using rule 28 (stmt -> retstmt .)
    SEMICOLON       reduce using rule 28 (stmt -> retstmt .)
    RETURN          reduce using rule 28 (stmt -> retstmt .)
    WHILE           reduce using rule 28 (stmt -> retstmt .)
    DO              reduce using rule 28 (stmt -> retstmt .)
    FOR             reduce using rule 28 (stmt -> retstmt .)
    IF              reduce using rule 28 (stmt -> retstmt .)
    LBRACE          reduce using rule 28 (stmt -> retstmt .)
    ID              reduce using rule 28 (stmt -> retstmt .)
    ELSE            reduce using rule 28 (stmt -> retstmt .)


state 41

    (29) stmt -> while .

    RBRACE          reduce using rule 29 (stmt -> while .)
    SEMICOLON       reduce using rule 29 (stmt -> while .)
    RETURN          reduce using rule 29 (stmt -> while .)
    WHILE           reduce using rule 29 (stmt -> while .)
    DO              reduce using rule 29 (stmt -> while .)
    FOR             reduce using rule 29 (stmt -> while .)
    IF              reduce using rule 29 (stmt -> while .)
    LBRACE          reduce using rule 29 (stmt -> while .)
    ID              reduce using rule 29 (stmt -> while .)
    ELSE            reduce using rule 29 (stmt -> while .)


state 42

    (30) stmt -> for .

    RBRACE          reduce using rule 30 (stmt -> for .)
    SEMICOLON       reduce using rule 30 (stmt -> for .)
    RETURN          reduce using rule 30 (stmt -> for .)
    WHILE           reduce using rule 30 (stmt -> for .)
    DO              reduce using rule 30 (stmt -> for .)
    FOR             reduce using rule 30 (stmt -> for .)
    IF              reduce using rule 30 (stmt -> for .)
    LBRACE          reduce using rule 30 (stmt -> for .)
    ID              reduce using rule 30 (stmt -> for .)
    ELSE            reduce using rule 30 (stmt -> for .)


state 43

    (31) stmt -> if .

    RBRACE          reduce using rule 31 (stmt -> if .)
    SEMICOLON       reduce using rule 31 (stmt -> if .)
    RETURN          reduce using rule 31 (stmt -> if .)
    WHILE           reduce using rule 31 (stmt -> if .)
    DO              reduce using rule 31 (stmt -> if .)
    FOR             reduce using rule 31 (stmt -> if .)
    IF              reduce using rule 31 (stmt -> if .)
    LBRACE          reduce using rule 31 (stmt -> if .)
    ID              reduce using rule 31 (stmt -> if .)
    ELSE            reduce using rule 31 (stmt -> if .)


state 44

    (32) stmt -> compoundstmt .

    RBRACE          reduce using rule 32 (stmt -> compoundstmt .)
    SEMICOLON       reduce using rule 32 (stmt -> compoundstmt .)
    RETURN          reduce using rule 32 (stmt -> compoundstmt .)
    WHILE           reduce using rule 32 (stmt -> compoundstmt .)
    DO              reduce using rule 32 (stmt -> compoundstmt .)
    FOR             reduce using rule 32 (stmt -> compoundstmt .)
    IF              reduce using rule 32 (stmt -> compoundstmt .)
    LBRACE          reduce using rule 32 (stmt -> compoundstmt .)
    ID              reduce using rule 32 (stmt -> compoundstmt .)
    ELSE            reduce using rule 32 (stmt -> compoundstmt .)


state 45

    (33) stmt -> SEMICOLON .

    RBRACE          reduce using rule 33 (stmt -> SEMICOLON .)
    SEMICOLON       reduce using rule 33 (stmt -> SEMICOLON .)
    RETURN          reduce using rule 33 (stmt -> SEMICOLON .)
    WHILE           reduce using rule 33 (stmt -> SEMICOLON .)
    DO              reduce using rule 33 (stmt -> SEMICOLON .)
    FOR             reduce using rule 33 (stmt -> SEMICOLON .)
    IF              reduce using rule 33 (stmt -> SEMICOLON .)
    LBRACE          reduce using rule 33 (stmt -> SEMICOLON .)
    ID              reduce using rule 33 (stmt -> SEMICOLON .)
    ELSE            reduce using rule 33 (stmt -> SEMICOLON .)


state 46

    (8) declaration -> type . identlist SEMICOLON
    (9) identlist -> . identifier
    (10) identlist -> . identlist COMMA identifier
    (11) identifier -> . ID
    (12) identifier -> . ID LBRACKET NUMBER RBRACKET

    ID              shift and go to state 22

    identlist                      shift and go to state 13
    identifier                     shift and go to state 15

state 47

    (34) assignstmt -> assign . SEMICOLON

    SEMICOLON       shift and go to state 61


state 48

    (37) callstmt -> call . SEMICOLON

    SEMICOLON       shift and go to state 62


state 49

    (43) retstmt -> RETURN . SEMICOLON
    (44) retstmt -> RETURN . expr SEMICOLON
    (45) expr -> . expr MINUS expr
    (46) expr -> . expr PLUS expr
    (47) expr -> . expr MULT expr
    (48) expr -> . expr DIV expr
    (49) expr -> . expr LE expr
    (50) expr -> . expr GE expr
    (51) expr -> . expr GT expr
    (52) expr -> . expr LT expr
    (53) expr -> . expr EQ expr
    (54) expr -> . expr NE expr
    (55) expr -> . call
    (56) expr -> . NUMBER
    (57) expr -> . FNUMBER
    (58) expr -> . id
    (59) expr -> . LPAREN expr RPAREN
    (38) call -> . ID LPAREN RPAREN
    (39) call -> . ID LPAREN arglist RPAREN
    (60) id -> . ID
    (61) id -> . ID LBRACKET expr RBRACKET

    SEMICOLON       shift and go to state 63
    NUMBER          shift and go to state 66
    FNUMBER         shift and go to state 67
    LPAREN          shift and go to state 69
    ID              shift and go to state 70

    expr                           shift and go to state 64
    call                           shift and go to state 65
    id                             shift and go to state 68

state 50

    (62) while -> WHILE . LPAREN expr RPAREN stmt

    LPAREN          shift and go to state 71


state 51
